# CPhysicsEngine

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/Collision/: BoundingSphere.doc.md
docs/Core/: Quaternion.doc.md
docs/Dynamics/: PhysicsWorld.doc.md
src/Broadphase/: UniformGrid.h
src/Collision/: BoundingBox.doc.md  BoundingBox.h  BoundingSphere.doc.md  BoundingSphere.h  CollisionManifold.doc.md  CollisionManifold.h  CollisionShape.doc.md  CollisionShape.h
src/Core/: Matrix3x3.doc.md  Matrix3x3.h  Quaternion.h  README.md  Vector3.doc.md  Vector3.h
src/Dynamics/: Dynamics.doc.md  PhysicsWorld.h  README.md  RigidBody.doc.md  RigidBody.h  pseudocode.txt
